<package format="2">
  <name>intermediate_node</name>
  <version>0.0.0</version>
  <description>Custom Publisher and Subscriber Node</description>

  <maintainer email="user@example.com">Yuma Fujiwara</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <depend>node_options_intermediate</depend>
  <depend>publisher_node</depend>
  <depend>rosidl_default_runtime</depend>


</package>